update on 15 April 2024

--- a/module_4_challenge.ipynb
+++ b/module_4_challenge.ipynb
@@ -240,6 +240,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "b24b53cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (628864435.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[13], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    category_qty = df.({\"item_id\", \"qty\"})\u001b[0m\n\u001b[1;37m                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use this space to do any additional research\n",
+    "# and familiarize yourself with the data.\n",
+    "category_qty = df.({\"item_id\", \"qty\"})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "bc0f4172",
    "metadata": {},
@@ -407,44 +428,32 @@
    "source": [
     "# Use the describe function to gather some basic statistics\n",
     "\n",
-    "df.describe()"
+    "df.describe()\n",
+    "\"client_id\", \"category\", \"subcategory\", \"qty\" = df[6], df[12], df[13], df[18]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "b24b53cc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use this space to do any additional research\n",
-    "# and familiarize yourself with the data.\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "551cb358",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "consumables    23538\n",
-       "furniture      11915\n",
-       "software        8400\n",
-       "Name: category, dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "f-string: expecting '}' (76020918.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[15], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"The three item categories that had the most entries are {category.len(3)\")\u001b[0m\n\u001b[1;37m                                                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m f-string: expecting '}'\n"
+     ]
     }
    ],
    "source": [
     "# What three item categories had the most entries?\n",
-    "\n"
+    "category.sort_values(by=\"qty\", asending=False)\n",
+    "print(f\"The three item categories that had the most entries are {category.len(3)\")\n",
+    "###### my lessons:len(df.columns) just gave how many columns this df has, not the one I want \n",
+    "###### column_entry_amount = \n",
+    "#sort in descending order"
    ]
   },
   {
@@ -468,7 +477,9 @@
    "source": [
     "# For the category with the most entries,\n",
     "# which subcategory had the most entries?\n",
-    "\n"
+    "for subcategory in category:\n",
+    "subcategory.sort_values(by=\"qty\", asending=False)\n",
+    "print(f\"For the category with most entries, {subcategory{0]} had the most entries\")"
    ]
   },
   {
@@ -495,7 +506,7 @@
    ],
    "source": [
     "# Which five clients had the most entries in the data?\n",
-    "\n"
+    "print(f\"The five clients that had the most enties in the data are {client_id.sort_values(by=\"qty\", asending=False).len(5)}\") \n"
    ]
   },
   {
@@ -517,7 +528,7 @@
    ],
    "source": [
     "# Store the client ids of those top 5 clients in a list.\n",
-    "\n"
+    "client_id_top_list = [client_id.sort_values(by=\"qty\", asending=Fase).len(5)}\")\n"
    ]
   },
   {
@@ -539,8 +550,8 @@
    ],
    "source": [
     "# How many total units (the qty column) did the\n",
-    "# client with the most entries order order?\n",
-    "\n"
+    "# client with the most entries order?\n",
+    "print(f\"Total units the top five clients with the most entries is {client_id_top_list}.sum()\")\n"
    ]
   },
   {
@@ -616,7 +627,12 @@
     "# Create a column that calculates the \n",
     "# subtotal for each line using the unit_price\n",
     "# and the qty\n",
-    "\n"
+    "Tf1 = {\n",
+    "    df[14],\n",
+    "    df[17],\n",
+    "    df[15]\n",
+    "}\n",
+    "return(Tf1)\n"
    ]
   },
   {
@@ -699,7 +715,13 @@
     "# Assume a shipping price of $7 per pound\n",
     "# for orders over 50 pounds and $10 per\n",
     "# pound for items 50 pounds or under.\n",
-    "\n"
+    "total_weight = unit_weight * qty\n",
+    "If pounds > 50\n",
+    "    shipping_price = total_weight * 7\n",
+    "else:\n",
+    "    shipping_price = total_weight * 10 \n",
+    "shipping_price.df = [\"unit_price\", unit_weight\", \"qty\"].append(\"total_weight\", \"shipping_price\" \n",
+    "returen(shipping_price.df)"
    ]
   },
   {
@@ -773,7 +795,10 @@
     "# Create a column for the total price\n",
     "# using the subtotal and the shipping price\n",
     "# along with a sales tax of 9.25%\n",
-    "\n"
+    "line_subtotal = unit_price * qty\n",
+    "[line_subtotal, shipping_price, line_price] = [{unit_price * qty}, {shipping_price}, {(line_subtotal + shipping_price) * (1 + 9.25%)}\n",
+    "total_price.df = [line_subtotal, shipping_price, line_price]\n",
+    "return(total_price.df)"
    ]
   },
   {
@@ -943,7 +968,8 @@
     "# of each line using unit cost, qty, and\n",
     "# shipping price (assume the shipping cost\n",
     "# is exactly what is charged to the client).\n",
-    "\n"
+    "line_cost = unit_cost * qty + shipping_price\n",
+    "df.append(line_cost).head(3)"
    ]
   },
   {
@@ -1111,7 +1137,8 @@
    "source": [
     "# Create a column for the profit of\n",
     "# each line using line cost and line price\n",
-    "\n"
+    "line_profit = line_price - line_cost\n",
+    "df.append(line_profit"
    ]
   },
   {
@@ -1146,7 +1173,8 @@
     }
    ],
    "source": [
-    "# Check your work using the totals above\n"
+    "# Check your work using the totals above\n",
+    "line_price(pd.iloc(order_id =2742071), pd.iloc(order_id=2173913), pd.iloc(order-id=6128929))"
    ]
   },
   {
@@ -1179,7 +1207,8 @@
    "source": [
     "# How much did each of the top 5 clients by quantity\n",
     "# spend? Check your work from Part 1 for client ids.\n",
-    "\n"
+    "top_clients = [client_id, pd.line_cost.sort(by=qty, asending=False)].len(5)\n",
+    "top_clients.head(5)"
    ]
   },
   {
@@ -1286,7 +1315,7 @@
     "# for the top 5 clients with the following information:\n",
     "# total units purchased, total shipping price,\n",
     "# total revenue, and total profit. Sort by total profit.\n",
-    "\n"
+    "[\"client_id\", \"qty\", \"shipping_price\", \"line_price\", \"line-cost\", \"line_profit\"].df = [top_clients[4,3,1,2,0], qty.sum(), shiping_price.sum(), line_cost.sum(), line_profit.sum()]\n"
    ]
   },
   {
@@ -1299,7 +1328,7 @@
     "# Format the data and rename the columns\n",
     "# to names suitable for presentation.\n",
     "# Currency should be in millions of dollars.\n",
-    "\n"
+    "df.rename([\"Shipping\", \"Total Revenue\", \"Total Cost\", \"Total Profit\"] = {[${Shipping}, ${Total Revenue}, ${Total Cost}, ${Total Profit}]}\n"
    ]
   },
   {
@@ -1402,7 +1431,8 @@
     }
    ],
    "source": [
-    "# Sort the updated data by \"Total Profit\" form highest to lowest\n"
+    "# Sort the updated data by \"Total Profit\" form highest to lowest\n",
+    "df.sort(by=Total Profit, assending=False)"
    ]
   },
   {
