--- a/module_4_challenge.ipynb
+++ b/module_4_challenge.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "e076f57f",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "4      195.10     108.17        46.43   20            1  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,14 +205,15 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('Resources/client_dataset.csv')\n",
+    "file = pd.read_csv('Resources/client_dataset.csv')\n",
     "\n",
+    "df = pd.DataFrame(file)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "71b9bbd2",
    "metadata": {},
    "outputs": [
@@ -226,7 +227,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,28 +241,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "b24b53cc",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (628864435.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[13], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    category_qty = df.({\"item_id\", \"qty\"})\u001b[0m\n\u001b[1;37m                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(54639, 18)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Use this space to do any additional research\n",
     "# and familiarize yourself with the data.\n",
-    "category_qty = df.({\"item_id\", \"qty\"})\n"
+    "df.shape\n",
+    "\n",
+    "###category_qty = df.columns({item_id, qty})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "bc0f4172",
    "metadata": {},
    "outputs": [
@@ -420,7 +425,7 @@
        "max      846.270000     46.430000  3.958244e+06      9.000000  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,28 +434,35 @@
     "# Use the describe function to gather some basic statistics\n",
     "\n",
     "df.describe()\n",
-    "\"client_id\", \"category\", \"subcategory\", \"qty\" = df[6], df[12], df[13], df[18]"
+    "### \"client_id\", \"category\", \"subcategory\", \"qty\" = df[6], df[12], df[13], df[18]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "551cb358",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "f-string: expecting '}' (76020918.py, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[15], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(f\"The three item categories that had the most entries are {category.len(3)\")\u001b[0m\n\u001b[1;37m                                                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m f-string: expecting '}'\n"
-     ]
+     "data": {
+      "text/plain": [
+       "47373    consumables\n",
+       "34204    consumables\n",
+       "34205    consumables\n",
+       "Name: category, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# What three item categories had the most entries?\n",
-    "category.sort_values(by=\"qty\", asending=False)\n",
-    "print(f\"The three item categories that had the most entries are {category.len(3)\")\n",
+    "###categories_with_most_entries = df['category'].sort_values(by=\"qty\", asending=False)\n",
+    "categories_with_most_entries = df['category'].sort_values()\n",
+    "categories_with_most_entries.head(3)\n",
+    "###print(f\"The three item categories that had the most entries are {category.len(category)\")\n",
     "###### my lessons:len(df.columns) just gave how many columns this df has, not the one I want \n",
     "###### column_entry_amount = \n",
     "#sort in descending order"
@@ -506,7 +518,7 @@
    ],
    "source": [
     "# Which five clients had the most entries in the data?\n",
-    "print(f\"The five clients that had the most enties in the data are {client_id.sort_values(by=\"qty\", asending=False).len(5)}\") \n"
+    "print(f\"The five clients that had the most enties in the data are {client_id.sort_values(by=\"qty\", asending=False).head()}\") \n"
    ]
   },
   {
@@ -528,7 +540,7 @@
    ],
    "source": [
     "# Store the client ids of those top 5 clients in a list.\n",
-    "client_id_top_list = [client_id.sort_values(by=\"qty\", asending=Fase).len(5)}\")\n"
+    "client_id_top_list = [client_id.sort_values(by=\"qty\", asending=Fase).head()}\")\n"
    ]
   },
   {
@@ -1460,7 +1472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
