--- a/wholesale_data_analysis_starter_code.ipynb
+++ b/wholesale_data_analysis_starter_code.ipynb
@@ -233,7 +233,7 @@
    ],
    "source": [
     "# View the column names in the data\n",
-    "\n"
+    "df.columns()\n"
    ]
   },
   {
@@ -1427,7 +1427,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
